--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <button class="button-styles" data-dogs>&lt;Dogs&gt;</button>
         <button class="button-styles" data-cats>&lt;Cats&gt;</button>
     </div>
+    <audio preload="auto" autobuffer autoplay loop>
+        <source src="assets/parck.mp3"/>
+    </audio>
     <script src="scripts/config.js"></script>
     <script src="scripts/freesound.js"></script>
     <script src="scripts/unsplash.js"></script>
