--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-    <link rel="shortcut icon" href="assets/tiles.png" type="image/x-icon">
     <link rel="stylesheet" href="stylesheets/index.css">
     <title>Parity</title>
 </head>
 
-<body>
+<body id="particles-js">
     <!-- header area to display title -->
     <header class="main-header">
         <div>
             <h1>Parity</h1>
-            <div data-level class="level"> Level 0 </div> 
+            <div data-level class="level"> Level 0 </div>
             <div data-timer class="timer">Time Remaining: 00:00</div>
-        </div>  
+        </div>
     </header>
 
 
@@ -41,7 +40,7 @@
         <button class="button-styles" data-cats>&lt;Cats&gt;</button>
     </div>
     <audio preload="auto" autobuffer autoplay loop>
-        <source src="assets/parck.mp3"/>
+        <source src="assets/parck.mp3" />
     </audio>
     <script src="scripts/config.js"></script>
     <script src="scripts/freesound.js"></script>
@@ -50,7 +49,7 @@
     <script src="scripts/buttons.js"></script>
     <script src="scripts/timer.js"></script>
     <script src="scripts/gameEnd.js"></script>
-
+    <script src="scripts/particles.js"></script>
 </body>
 
 </html>
